# src/controllers/ingredients.js
@@ -1,19 +1,14 @@
 const { ingredients: service } = require("../services");
 const { asyncWrapper, responseData } = require("../helpers/apiHelpers");
-const { NotFoundError } = require("../helpers/errors");
 
-const getIngredientsController = async (req, res) => {
+const getRecipeByIngredientController = async (req, res) => {
   const { value } = req.query;
-  const result = await service.getIngredients(value);
-
-  if (result.length === 0) {
-    res.status(404).json(new NotFoundError());
-  }
+  const ingredients = await service.getRecipeByIngredient(value);
 
   res.status(200).json(
     responseData(
       {
-        result,
+        ingredients,
       },
       200
     )
@@ -21,5 +16,7 @@ const getIngredientsController = async (req, res) => {
 };
 
 module.exports = {
-  getIngredientsController: asyncWrapper(getIngredientsController),
+  getRecipeByIngredientController: asyncWrapper(
+    getRecipeByIngredientController
+  ),
 };
