# src/routes/api/ingredients.js
@@ -4,6 +4,10 @@ const router = express.Router();
 const { ingredients: middleware } = require("../../middlewares");
 const { ingredients: controller } = require("../../controllers");
 
-router.get("/", middleware.getIngredients, controller.getIngredientsController);
+router.get(
+  "/",
+  middleware.getRecipeByIngredient,
+  controller.getRecipeByIngredientController
+);
 
 module.exports = router;
